--- a/templates/home.html
+++ b/templates/home.html
@@ -120,107 +120,107 @@
 
         
         <section class="mt-24 m-10">
-            <h2 class="text-2xl font-semibold text-green-900 bg-white border-b-2 border-green-950 pb-5 fade-in">Our Products</h2>
+            <h2 class="text-4xl font-semibold text-green-900 bg-white border-b-2 border-green-950 pb-5 fade-in">Our Products</h2>
             <div class="grid grid-cols-4 md:grid-cols-6 m-5 border-gray-500 p-10 fade-in">
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/Angles.jpg' %}" alt="Angles">
-                    <p class="mt-2 font-semibold ">Angles</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/Angles.jpg' %}" alt="Angles">
+                    <p class="mt-2 text-xl font-semibold ">Angles</p>
                 </div>
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/products.jpg' %}" alt="Billets">
-                    <p class="mt-2 font-semibold ">Billets</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/products.jpg' %}" alt="Billets">
+                    <p class="mt-2 text-xl font-semibold ">Billets</p>
                 </div>
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/Channels.jpg' %}" alt="Channels">
-                    <p class="mt-2 font-semibold ">Channels</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/Channels.jpg' %}" alt="Channels">
+                    <p class="mt-2 text-xl font-semibold ">Channels</p>
                 </div>
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Rebars</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Rebars</p>
                 </div>
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/Angles.jpg' %}" alt="Angles">
-                    <p class="mt-2 font-semibold ">By-Products</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/Angles.jpg' %}" alt="Angles">
+                    <p class="mt-2 text-xl font-semibold ">By-Products</p>
                 </div>
                 <div class="text-center">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/products.jpg' %}" alt="Billets">
-                    <p class="mt-2 font-semibold ">Exports</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/products.jpg' %}" alt="Billets">
+                    <p class="mt-2 text-xl font-semibold ">Exports</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/Channels.jpg' %}" alt="Channels">
-                    <p class="mt-2 font-semibold ">Forged Rounds</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/Channels.jpg' %}" alt="Channels">
+                    <p class="mt-2 text-xl font-semibold ">Forged Rounds</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Product Mix</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Product Mix</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Wire Rod Coils</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Wire Rod Coils</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Structurals</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Structurals</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Special Steel</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Special Steel</p>
                 </div>
                 <div class="text-center mt-10">
-                    <img class="h-24 w-24 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
-                    <p class="mt-2 font-semibold ">Plain Rounds</p>
+                    <img class="h-32 w-32 mx-auto" src="{% static 'images/rebars.jpg' %}" alt="Rebars">
+                    <p class="mt-2 text-xl font-semibold ">Plain Rounds</p>
                 </div>
             </div>
         </section>
         
         <section class="mt-12">
-            <h2 class="text-2xl font-semibold text-green-800 bg-white m-10 p-5 border-b-2 border-green-800 fade-in">Why RINL?</h2>
+            <h2 class="text-4xl font-semibold text-green-800 bg-white m-10 p-5 border-b-2 border-green-800 fade-in">Why RINL?</h2>
             <div class="grid grid-rows-1 md:grid-rows-3 gap-4 m-10">
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Quality Reassurance</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        RINL is committed to producing **high-quality, durable, and precision-engineered steel** products that meet international standards.
-                        Our products undergo **rigorous quality control checks** at every stage of production to ensure excellence.
+                    <h3 class="font-bold text-2xl text-green-700">Quality Reassurance</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        RINL is committed to producing <strong>high-quality, durable, and precision-engineered steel</strong> products that meet international standards.
+                        Our products undergo <strong>rigorous quality control checks</strong> at every stage of production to ensure excellence.
                     </p>
                 </div>
         
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Diverse Product Range</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        We offer a **wide range of steel products**, including **TMT bars, structural steel, wire rods, forgings, and customized steel solutions** 
+                    <h3 class="font-bold text-2xl text-green-700">Diverse Product Range</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        We offer a <strong>Wide range of steel products</strong>, including <strong>TMT bars, structural steel, wire rods, forgings, and customized steel solutions</strong>
                         for various industrial and construction needs.
                     </p>
                 </div>
         
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Reliable Supply Chain</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        With **state-of-the-art production facilities and a strong logistics network**, we guarantee **timely deliveries** across India and 
+                    <h3 class="font-bold text-2xl text-green-700">Reliable Supply Chain</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        With <strong>state-of-the-art production facilities and a strong logistics network </strong>, we guarantee <strong>timely deliveries</strong> across India and 
                         international markets, ensuring an uninterrupted supply of steel materials.
                     </p>
                 </div>
         
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Eco-Friendly Steel Production</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        RINL prioritizes **sustainable manufacturing** with eco-friendly processes, minimal waste, and reduced carbon emissions.
-                        Our facilities follow **ISO 14001:2015 Environmental Management Standards** to ensure green production.
+                    <h3 class="font-bold text-2xl text-green-700">Eco-Friendly Steel Production</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        RINL prioritizes <strong>sustainable manufacturing</strong> with eco-friendly processes, minimal waste, and reduced carbon emissions.
+                        Our facilities follow <strong>ISO 14001:2015 Environmental Management Standards</strong> to ensure green production.
                     </p>
                 </div>
         
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Trusted by Industries</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        Our steel is widely used in **infrastructure, railways, automotive, shipbuilding, power plants, and defense sectors**. 
-                        We have earned the trust of clients across industries with our **reliable and high-strength steel solutions**.
+                    <h3 class="font-bold text-2xl text-green-700">Trusted by Industries</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        Our steel is widely used in <strong>infrastructure, railways, automotive, shipbuilding, power plants, and defense sectors</strong>. 
+                        We have earned the trust of clients across industries with our <strong>reliable and high-strength steel solutions</strong>.
                     </p>
                 </div>
         
                 <div class="bg-white p-6  fade-in">
-                    <h3 class="font-bold text-lg text-green-700">Customer-Centric Approach</h3>
-                    <p class="text-sm text-gray-700 m-5">
-                        We believe in **building long-term relationships** with our customers by offering **customized steel solutions, competitive pricing, 
-                        and excellent after-sales support**. Customer satisfaction is our priority.
+                    <h3 class="font-bold text-2xl text-green-700">Customer-Centric Approach</h3>
+                    <p class="text-xl text-gray-700 m-5">
+                        We believe in <strong>building long-term relationships</strong> with our customers by offering <strong>customized steel solutions, competitive pricing, 
+                        and excellent after-sales support</strong>. Customer satisfaction is our priority.
                     </p>
                 </div>
             </div>
@@ -229,8 +229,8 @@
          <!-- About Section -->
         <section class="fade-in mt-10 mx-auto max-w-5xl p-6 bg-white">
             <h2 class="text-3xl text-brown font-bold text-center text-green-900 mb-4">Who we are ?</h2>
-            <p class="text-green-800 text-justify mt-10">
-                Rashtriya Ispat Nigam Limited (RINL), the corporate entity of Vizag Steel, is India's **first shore-based integrated steel plant**. 
+            <p class=" text-justify text-xl mt-10">
+                Rashtriya Ispat Nigam Limited (RINL), the corporate entity of Vizag Steel, is India's <strong>first shore-based integrated steel plant</strong>. 
                 With a commitment to high-quality products and sustainable development, we serve various industries, ensuring excellence in every steel component produced.
             </p>
         </section>
@@ -240,15 +240,16 @@
             <h2 class="text-3xl text-green-900 font-bold">Our Milestones</h2>
             <div class="flex flex-wrap justify-center mt-8">
                 <div class="m-4 p-6 bg-green-900 text-white shadow-md rounded-lg">
-                    <h3 class="text-lg font-semibold ">1982</h3>
+                    <h3 class="text-xl font-semibold pb-4">1982</h3>
                     <p>Established as India's first shore-based steel plant.</p>
                 </div>
-                <div class="m-4 p-6 bg-green-900 text-white shadow-md rounded-lg">2015</h3>
+                <div class="m-4 p-6 bg-green-900 text-white shadow-md rounded-lg">
+                    <h3 class="text-xl font-semibold pb-4">2015</h3>
                     <p>Certified with ISO 50001:2011 for energy management.</p>
                 </div>
                 <div class="m-4 p-6 bg-green-900 text-white shadow-md rounded-lg">
-                    <h3 class="text-lg font-semibold ">2023</h3>
-                    <p>Achieved record production and global export expansion.</p>
+                    <h3 class="text-xl font-semibold pb-4">2023</h3>
+                    <p >Achieved record production and global export expansion.</p>
                 </div>
             </div>
         </section>
