--- a/templates/products.html
+++ b/templates/products.html
@@ -63,7 +63,7 @@
             <div class="overflow-x-auto">
                 <table class="w-full border-collapse border border-gray-300 mt-3">
                     <thead>
-                        <tr class="bg-gray-800 text-white text-xs sm:text-sm lg:text-base">
+                        <tr class="bg-green-900 text-white text-xs sm:text-sm lg:text-base">
                             <th class="border border-gray-300 p-2">Product ID</th>
                             <th class="border border-gray-300 p-2">Product Name</th>
                             <th class="border border-gray-300 p-2">Stock (Tons)</th>
