--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -131,7 +131,7 @@
         <h2 class="text-green-900 text-center text-2xl"><strong>Meet Our Team</strong></h2>
         <div class="flex flex-column gap-4 justify-center items-center">
             <div class="flex justify-center items-center p-10">
-                <img src="{% static 'images\me.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
+                <img src="{% static 'images\me.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full border-4">
             </div>
             <div class="text-start p-5 text-xl w-1/3">
                 <h3 class="mb-5">Yarrapothu Sai Chandu </h3>
@@ -160,7 +160,7 @@
           </div>
           <div class="flex flex-column gap-4 justify-center items-center">
             <div class="flex justify-center items-center p-10">
-                <img src="{% static 'images\me.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
+                <img src="{% static 'images\kavitha2.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full border-4">
             </div>
             <div class="text-start p-5 text-xl w-1/3 ">
                 <h3 class="mb-5">Subramania Kavitha Priya</h3>
