--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -140,21 +140,21 @@
             <div class="flex justify-around items-center w-1/3">
                 <a href = "https://www.linkedin.com/in/yarrapothu-sai-chandu-ab45b4244/" target = "blank" class = "linkedin-link"> LinkedIn</a>
                 <a href = "https://github.com/YSChandu" target = "blank" class = "linkedin-link">Github</a>
-                <a>yarrapothusaichandu@gmail.com</a>
+                <a>yarrapothusaichandu@gmail.com </a>
             </div>
         </div>
         
           <div class="flex flex-column gap-4 justify-center items-center">
             <div class="flex justify-center items-center p-10">
-                <img src="{% static 'images\me.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
+                <img src="{% static 'images\5.1.png' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
             </div>
             <div class="text-start p-5 text-xl w-1/3 ">
                 <h3 class="mb-5">Kolli Lakshmi</h3>
                 <p><strong>Role:</strong> Frontend Developer </p>
             </div>
             <div class="flex justify-around items-center w-1/3">
-                <a href = "https://www.linkedin.com/in/yarrapothu-sai-chandu-ab45b4244/" target = "blank" class = "linkedin-link"> LinkedIn</a>
-                <a href = "https://github.com/YSChandu" target = "blank" class = "linkedin-link">Github</a>
+                <a href = "" target = "blank" class = "linkedin-link"> LinkedIn</a>
+                <a href = "" target = "blank" class = "linkedin-link">Github</a>
                 <a>kollilakshmi@gmail.com</a>
             </div>
           </div>
@@ -167,23 +167,23 @@
                 <p><strong>Role:</strong> Frontend Developer </p>
             </div>
             <div class="flex justify-around items-center w-1/3">
-                <a href = "https://www.linkedin.com/in/yarrapothu-sai-chandu-ab45b4244/" target = "blank" class = "linkedin-link"> LinkedIn</a>
-                <a href = "https://github.com/YSChandu" target = "blank" class = "linkedin-link">Github</a>
+                <a href = "" target = "blank" class = "linkedin-link"> LinkedIn</a>
+                <a href = "" target = "blank" class = "linkedin-link">Github</a>
                 <a>kavithapriya@gmail.com</a>
             </div>
         </div>
         <div class="flex flex-column gap-4 justify-center items-center">
             <div class="flex justify-center items-center p-10">
-                <img src="{% static 'images\me.jpg' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
+                <img src="{% static 'images\5.1.png' %}" alt="Team Lead" class="h-56 w-56 rounded-full">
             </div>
             <div class="text-start p-5 text-xl w-1/3">
-                <h3 class="mb-5">Rayanuthala Doni Kowshik</h3>
+                <h3 class="mb-5">R. Doni Kowshik</h3>
                 <p><strong>Role:</strong> Backend Developer </p>
             </div>
             <div class="flex justify-around items-center w-1/3">
-                <a href = "https://www.linkedin.com/in/yarrapothu-sai-chandu-ab45b4244/" target = "blank" class = "linkedin-link"> LinkedIn</a>
-                <a href = "https://github.com/YSChandu" target = "blank" class = "linkedin-link">Github</a>
-                <a>yarrapothusaichandu@gmail.com</a>
+                <a href = "" target = "blank" class = "linkedin-link"> LinkedIn</a>
+                <a href = "" target = "blank" class = "linkedin-link">Github</a>
+                <a>donikowshik@gmail.com</a>
             </div>
           </div>
     </section>
@@ -194,7 +194,7 @@
     </footer>
 
     <script>
-        document.querySelector(".hamburger")?.addEventListener("click",()=>{
+        document.querySelector(".hamburger")?.addEventListener("click",()=>{                        
             document.querySelector(".dropdown").classList.toggle("hidden");
         });
     </script>
